[package]
name = "rand-index"
version = "0.1.0"
authors = ["Lance Hepler <lance.hepler@10xgenomics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
debug = 1
lto = true
codegen-units = 1
